@@ -4,6 +4,8 @@ use Mojo::Base 'Mojolicious';
 use Email::Valid ();
 use HTTP::Body::Builder::MultiPart;
 use HTTP::Tiny;
+use Path::Tiny;
+use Try::Tiny;
 
 use OpenCloset::Schema;
 
@@ -164,7 +166,12 @@ sub _add_task {
                 $app->log->info("Photo uploaded: $res->{headers}{location}");
             }
 
-            $img->remove;
+            try {
+                path($img)->remove;
+            }
+            catch {
+                $app->log->error("Failed to remove tempfile: $_");
+            };
         }
     );
 }
