@@ -196,7 +196,7 @@ sub create {
         ## upload photo
         my $photo = $v->param('photo');
         if ( $photo->size ) {
-            my $temp = Path::Tiny->tempfile( UNLINK => 0, DIR => 'db' );
+            my $temp = Path::Tiny->tempfile( UNLINK => 0, DIR => './db' );
             $photo->move_to("$temp");
             $self->minion->enqueue( upload_clothes_photo => [ $code, $temp ] );
         }
