@@ -1,5 +1,6 @@
   - 운영시간안내 수정
   - 업로드된 이미지를 container 간 공유를 위해 /tmp 대신에 ./db 를 사용
+  - jobqueue 에서 avatar 에 업로드 하고 나면 tempfile 을 삭제
 
 v0.4.10   Thu, 04 May 2017 16:32:31 +0900
   - 재활용(비전) 상태를 추가할 수 있도록 하고 현황을 나타냄 (#93)
